--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -162,12 +162,9 @@ jobs:
           $conda_exe clean --all --yes
 
           ### move and rename executables
-          mv "${HOME}/dist/main" "${root}/main"
-          mv "${HOME}/dist/main.app" "${root}/main.app"
-
-          # ### move and rename executables DEBUG
-          # mv "${HOME}/dist/main" "${root}/EcoAssist ${RELEASE_VERSION} debug"
-          # mv "${HOME}/dist/main.app" "${root}/EcoAssist ${RELEASE_VERSION}.app"
+          cp "${HOME}/dist/main" "${root}/EcoAssist ${RELEASE_VERSION} installer"  # installer executable
+          cp "${HOME}/dist/main" "${root}/EcoAssist ${RELEASE_VERSION} debug"      # debug executable
+          cp "${HOME}/dist/main.app" "${root}/EcoAssist ${RELEASE_VERSION}.app"    # main app executable
 
       - name: Zip folder contents
         run: |
