--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -155,8 +155,8 @@ jobs:
 
           ### move and rename executables
           cp "${HOME}/dist/main" "${root}/EcoAssist ${RELEASE_VERSION} installer"  # installer executable
-          cp "${HOME}/dist/main" "${root}/EcoAssist ${RELEASE_VERSION} debug"      # debug executable
-          cp "${HOME}/dist/main.app" "${root}/EcoAssist ${RELEASE_VERSION}.app"    # main app executable
+          mv "${HOME}/dist/main" "${root}/EcoAssist ${RELEASE_VERSION} debug"      # debug executable
+          mv "${HOME}/dist/main.app" "${root}/EcoAssist ${RELEASE_VERSION}.app"    # main app executable
 
       - name: Zip folder contents
         run: |
