--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -159,24 +159,24 @@ jobs:
         with:
           project_id: github-file-storage
 
-      - name: Upload pinned zip version to Google Cloud
+      - name: Upload pinned 7z version to Google Cloud
         shell: cmd
         run: |
           set BUCKET_NAME=${{ env.BUCKET_NAME }}
           set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
           set LATEST_FOLDER_NAME=latest
-          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.zip
-          set LATEST_FILE_NAME=windows-latest.zip
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.7z
+          set LATEST_FILE_NAME=windows-latest.7z
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%PINNED_FOLDER_NAME%/%PINNED_FILE_NAME%
 
-      - name: Upload latest zip version to Google Cloud
+      - name: Upload latest 7z version to Google Cloud
         shell: cmd
         run: |
           set BUCKET_NAME=${{ env.BUCKET_NAME }}
           set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
           set LATEST_FOLDER_NAME=latest
-          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.zip
-          set LATEST_FILE_NAME=windows-latest.zip
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.7z
+          set LATEST_FILE_NAME=windows-latest.7z
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%LATEST_FOLDER_NAME%/%LATEST_FILE_NAME%
 
       - name: Get the release body
@@ -186,7 +186,7 @@ jobs:
       - name: Append link to release body
         shell: pwsh
         run: |
-          Add-Content -Path "release_body.txt" -Value '- Install for **Windows**: [windows-${{ env.RELEASE_VERSION }}.zip](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/windows-${{ env.RELEASE_VERSION }}.zip)'
+          Add-Content -Path "release_body.txt" -Value '- Install for **Windows**: [windows-${{ env.RELEASE_VERSION }}.7z](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/windows-${{ env.RELEASE_VERSION }}.7z)'
 
       - name: Update the release body
         shell: cmd
