--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -141,13 +141,26 @@ jobs:
       #     call "%conda_exe%" clean --all --yes --force-pkgs-dirs
       #     call "%conda_exe%" clean --all --yes
 
-      - name: Zip folder contents with 7-Zip
+      # - name: Zip folder contents with 7-Zip
+      #   shell: cmd
+      #   run: |
+      #     "C:\Program Files\7-Zip\7z.exe" a -tzip "windows-${{ env.RELEASE_VERSION }}.zip" "%USERPROFILE%\EcoAssist"
+      
+      - name: Create self-extracting 7z archive
         shell: cmd
         run: |
-          @REM "C:\Program Files\7-Zip\7z.exe" a -tzip "windows-${{ env.RELEASE_VERSION }}.zip" "%USERPROFILE%\EcoAssist" DEBUG
-          @REM "C:\Program Files\7-Zip\7z.exe" a -t7z "windows-${{ env.RELEASE_VERSION }}.7z" "%USERPROFILE%\EcoAssist"
-          "C:\Program Files\7-Zip\7z.exe" a -t7z -mx9 "windows-${{ env.RELEASE_VERSION }}.7z" "%USERPROFILE%\EcoAssist"
-          "C:\Program Files\7-Zip\7z.exe" a -t7z "windows-${{ env.RELEASE_VERSION }}.7z" "%USERPROFILE%\EcoAssist"
+          set 7z_path="C:\Program Files\7-Zip\7z.exe"
+          set archive_name="windows-${{ env.RELEASE_VERSION }}.7z"
+          set sfx_name="windows-${{ env.RELEASE_VERSION }}.exe"
+      
+          rem Create the 7z archive
+          "%7z_path%" a -t7z -mx9 "%archive_name%" "%USERPROFILE%\EcoAssist"
+      
+          rem Create the self-extracting archive
+          "%7z_path%" a -sfx7z.sfx -t7z "%sfx_name%" "%archive_name%"
+      
+          rem Clean up the intermediate 7z file if not needed
+          del "%archive_name%"
 
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v1
@@ -159,24 +172,24 @@ jobs:
         with:
           project_id: github-file-storage
 
-      - name: Upload pinned 7z version to Google Cloud
+      - name: Upload pinned exe version to Google Cloud
         shell: cmd
         run: |
           set BUCKET_NAME=${{ env.BUCKET_NAME }}
           set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
           set LATEST_FOLDER_NAME=latest
-          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.7z
-          set LATEST_FILE_NAME=windows-latest.7z
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.exe
+          set LATEST_FILE_NAME=windows-latest.exe
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%PINNED_FOLDER_NAME%/%PINNED_FILE_NAME%
 
-      - name: Upload latest 7z version to Google Cloud
+      - name: Upload latest exe version to Google Cloud
         shell: cmd
         run: |
           set BUCKET_NAME=${{ env.BUCKET_NAME }}
           set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
           set LATEST_FOLDER_NAME=latest
-          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.7z
-          set LATEST_FILE_NAME=windows-latest.7z
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.exe
+          set LATEST_FILE_NAME=windows-latest.exe
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%LATEST_FOLDER_NAME%/%LATEST_FILE_NAME%
 
       - name: Get the release body
@@ -186,7 +199,7 @@ jobs:
       - name: Append link to release body
         shell: pwsh
         run: |
-          Add-Content -Path "release_body.txt" -Value '- Install for **Windows**: [windows-${{ env.RELEASE_VERSION }}.7z](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/windows-${{ env.RELEASE_VERSION }}.7z)'
+          Add-Content -Path "release_body.txt" -Value '- Install for **Windows**: [windows-${{ env.RELEASE_VERSION }}.exe](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/windows-${{ env.RELEASE_VERSION }}.exe)'
 
       - name: Update the release body
         shell: cmd
