--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -149,11 +149,9 @@ jobs:
       - name: Create self-extracting zip archive
         shell: cmd
         run: |
-          @REM "C:\Program Files\7-Zip\7z.exe" a -sfxx64\7z.sfx -t7z -mx9 "windows-${{ env.RELEASE_VERSION }}.exe" "%USERPROFILE%\EcoAssist"
           "C:\Program Files\7-Zip\7z.exe" a -sfx7z.sfx -mx9 "windows-${{ env.RELEASE_VERSION }}.exe" "%USERPROFILE%\EcoAssist"
           @REM "C:\Program Files\7-Zip\7z.exe" a -t7z -mx9 "windows-${{ env.RELEASE_VERSION }}.7z" "%USERPROFILE%\EcoAssist"
           @REM "C:\Program Files\7-Zip\7z.exe" a -tzip -mx9 "windows-${{ env.RELEASE_VERSION }}.zip" "%USERPROFILE%\EcoAssist"
-
 
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v1
@@ -165,24 +163,24 @@ jobs:
         with:
           project_id: github-file-storage
 
-      - name: Upload pinned zip version to Google Cloud
+      - name: Upload pinned exe version to Google Cloud
         shell: cmd
         run: |
           set BUCKET_NAME=${{ env.BUCKET_NAME }}
           set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
           set LATEST_FOLDER_NAME=latest
-          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.zip
-          set LATEST_FILE_NAME=windows-latest.zip
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.exe
+          set LATEST_FILE_NAME=windows-latest.exe
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%PINNED_FOLDER_NAME%/%PINNED_FILE_NAME%
 
-      - name: Upload latest zip version to Google Cloud
+      - name: Upload latest exe version to Google Cloud
         shell: cmd
         run: |
           set BUCKET_NAME=${{ env.BUCKET_NAME }}
           set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
           set LATEST_FOLDER_NAME=latest
-          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.zip
-          set LATEST_FILE_NAME=windows-latest.zip
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.exe
+          set LATEST_FILE_NAME=windows-latest.exe
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%LATEST_FOLDER_NAME%/%LATEST_FILE_NAME%
 
       - name: Get the release body
@@ -192,7 +190,7 @@ jobs:
       - name: Append link to release body
         shell: pwsh
         run: |
-          Add-Content -Path "release_body.txt" -Value '- Install for **Windows**: [windows-${{ env.RELEASE_VERSION }}.zip](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/windows-${{ env.RELEASE_VERSION }}.zip)'
+          Add-Content -Path "release_body.txt" -Value '- Install for **Windows**: [windows-${{ env.RELEASE_VERSION }}.exe](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/windows-${{ env.RELEASE_VERSION }}.exe)'
 
       - name: Update the release body
         shell: cmd
