--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -149,8 +149,8 @@ jobs:
       - name: Create self-extracting zip archive
         shell: cmd
         run: |
-          "C:\Program Files\7-Zip\7z.exe" a -sfx7z.sfx -mx9 "windows-${{ env.RELEASE_VERSION }}.exe" "%USERPROFILE%\EcoAssist"
-          @REM "C:\Program Files\7-Zip\7z.exe" a -t7z -mx9 "windows-${{ env.RELEASE_VERSION }}.7z" "%USERPROFILE%\EcoAssist"
+          @REM "C:\Program Files\7-Zip\7z.exe" a -sfx7z.sfx -mx9 "windows-${{ env.RELEASE_VERSION }}.exe" "%USERPROFILE%\EcoAssist"
+          "C:\Program Files\7-Zip\7z.exe" a -t7z -mx9 "windows-${{ env.RELEASE_VERSION }}.7z" "%USERPROFILE%\EcoAssist"
           @REM "C:\Program Files\7-Zip\7z.exe" a -tzip -mx9 "windows-${{ env.RELEASE_VERSION }}.zip" "%USERPROFILE%\EcoAssist"
 
       - name: Authenticate with Google Cloud
@@ -163,24 +163,24 @@ jobs:
         with:
           project_id: github-file-storage
 
-      - name: Upload pinned exe version to Google Cloud
+      - name: Upload pinned 7z version to Google Cloud
         shell: cmd
         run: |
           set BUCKET_NAME=${{ env.BUCKET_NAME }}
           set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
           set LATEST_FOLDER_NAME=latest
-          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.exe
-          set LATEST_FILE_NAME=windows-latest.exe
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.7z
+          set LATEST_FILE_NAME=windows-latest.7z
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%PINNED_FOLDER_NAME%/%PINNED_FILE_NAME%
 
-      - name: Upload latest exe version to Google Cloud
+      - name: Upload latest 7z version to Google Cloud
         shell: cmd
         run: |
           set BUCKET_NAME=${{ env.BUCKET_NAME }}
           set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
           set LATEST_FOLDER_NAME=latest
-          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.exe
-          set LATEST_FILE_NAME=windows-latest.exe
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.7z
+          set LATEST_FILE_NAME=windows-latest.7z
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%LATEST_FOLDER_NAME%/%LATEST_FILE_NAME%
 
       - name: Get the release body
@@ -190,7 +190,7 @@ jobs:
       - name: Append link to release body
         shell: pwsh
         run: |
-          Add-Content -Path "release_body.txt" -Value '- Install for **Windows**: [windows-${{ env.RELEASE_VERSION }}.exe](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/windows-${{ env.RELEASE_VERSION }}.exe)'
+          Add-Content -Path "release_body.txt" -Value '- Install for **Windows**: [windows-${{ env.RELEASE_VERSION }}.7z](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/windows-${{ env.RELEASE_VERSION }}.7z)'
 
       - name: Update the release body
         shell: cmd
