--- a/.github/workflows/build-ubuntu-release.yml
+++ b/.github/workflows/build-ubuntu-release.yml
@@ -2,9 +2,9 @@ name: Build Ubuntu release
 
 on:
   workflow_dispatch:
-  release:
-    types:
-      - published
+  # release:
+  #   types:
+  #     - published
 
 jobs:
   build-ubuntu-release:
