--- a/.github/workflows/nsis-test.yml
+++ b/.github/workflows/nsis-test.yml
@@ -12,11 +12,12 @@ jobs:
       uses: actions/checkout@v3
         
     - name: Install Nsis7z Extension
+      shell: pwsh
       run: |
-        where makensis
         curl -L -o Nsis7z.zip "https://nsis.sourceforge.io/mediawiki/images/9/93/Nsis7z.zip"
         tar -xf Nsis7z.zip
-        copy /y "Nsis7z\\x64-Unicode\\nsis7z.dll" "C:\\Program Files (x86)\\NSIS\\Plugins\\"
+        Copy-Item -Path "Nsis7z\\x64-Unicode\\nsis7z.dll" -Destination "C:\\Program Files (x86)\\NSIS\\Plugins\\" -Force
+
 
     # - name: Install Inetc Plugin
     #   run: |
