--- a/.github/workflows/nsis-test.yml
+++ b/.github/workflows/nsis-test.yml
@@ -11,20 +11,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Verify Extraction
-      shell: pwsh
-      run: |
-        curl -L -o Nsis7z.zip "https://nsis.sourceforge.io/mediawiki/images/9/93/Nsis7z.zip"
-        tar -xf Nsis7z.zip
-        Get-ChildItem -Path . -Recurse
-
-  
     - name: Install Nsis7z Extension
       shell: pwsh
       run: |
-        curl -L -o Nsis7z.zip "https://nsis.sourceforge.io/mediawiki/images/9/93/Nsis7z.zip"
+        cd %USERPROFILE%
+        curl -L -o Nsis7z.zip "https://prdownloads.sourceforge.net/nsis/nsis-3.10-setup.exe?download"
         tar -xf Nsis7z.zip
         Copy-Item -Path "Nsis7z\\x64-Unicode\\nsis7z.dll" -Destination "C:\\Program Files (x86)\\NSIS\\Plugins\\" -Force
+
+
+        
 
 
     # - name: Install Inetc Plugin
